apps/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pihole
  namespace: pihole

spec:
  replicas: 1

  selector:
    matchLabels:
      app: pihole

  template:
    metadata:
      labels:
        app: pihole

    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest

          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP

            - name: dns-udp
              containerPort: 53
              protocol: UDP

            - name: http
              containerPort: 80
              protocol: TCP

          volumeMounts:
            - name: pihole-data
              mountPath: /etc/pihole

      volumes:
        - name: pihole-data
          persistentVolumeClaim:
            claimName: pihole-data
