apps/pihole/service-dns.yaml
apiVersion: v1
kind: Service

metadata:
  name: pihole-dns
  namespace: pihole

  annotations:
    metallb.io/loadBalancerIPs: 10.10.10.202

spec:
  type: LoadBalancer

  selector:
    app: pihole

  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP

    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
